@@ -489,24 +489,38 @@ print "AA: " . @opt_dumpspecs . "\n";
 	}
 
 	# unlink all possible index files for this dump.
-	unlink Amanda::Logfile::getindex_unsorted_gz_fname(
+	my $index_filename_gz = Amanda::Logfile::getindex_unsorted_gz_fname(
 		$current_dump->{hostname}, $current_dump->{diskname},
 		$current_dump->{dump_timestamp}, $current_dump->{level});
+	unlink $index_filename_gz;
+	my $index_filename = Amanda::Logfile::getindex_unsorted_fname(
+		$current_dump->{hostname}, $current_dump->{diskname},
+		$current_dump->{dump_timestamp}, $current_dump->{level});
+	unlink $index_filename;
 	unlink Amanda::Logfile::getindex_sorted_gz_fname(
 		$current_dump->{hostname}, $current_dump->{diskname},
 		$current_dump->{dump_timestamp}, $current_dump->{level});
 	unlink Amanda::Logfile::getindex_sorted_fname(
 		$current_dump->{hostname}, $current_dump->{diskname},
 		$current_dump->{dump_timestamp}, $current_dump->{level});
-	my $index_filename = Amanda::Logfile::getindex_unsorted_fname(
-		$current_dump->{hostname}, $current_dump->{diskname},
-		$current_dump->{dump_timestamp}, $current_dump->{level});
 
 	# send stdout to the index file
-	my $index_file;
-	open($index_file, ">", $index_filename);
-	$xfer_dest = Amanda::Xfer::Dest::Fd->new(fileno($index_file));
-	close($index_file);
+	if (getconf($CNF_COMPRESS_INDEX)) {
+	    my $index_file;
+	    open($index_file, ">", $index_filename_gz);
+	    push @filters,
+		Amanda::Xfer::Filter::Process->new(
+			[ $Amanda::Constants::COMPRESS_PATH,
+			  $Amanda::Constants::COMPRESS_BEST_OPT ], 0, 0, 0, 0);
+
+	    $xfer_dest = Amanda::Xfer::Dest::Fd->new(fileno($index_file));
+	    close($index_file);
+	} else {
+	    my $index_file;
+	    open($index_file, ">", $index_filename);
+	    $xfer_dest = Amanda::Xfer::Dest::Fd->new(fileno($index_file));
+	    close($index_file);
+	}
 
 	# start reading all filter stderr
 	foreach my $filter (@filters) {
